# tanssi-softlaw

./: Cargo.toml
IP_pallet/: Cargo.toml
container-chains/runtime-templates/simple/: Cargo.toml
container-chains/runtime-templates/simple/src/: lib.rs
container-chains/runtime-templates/simple/src/configs/: mod.rs
solo-chains/runtime/dancelight/src/: lib.rs
