[package]
name = "pallet_ip_pallet"
version = "0.2.0"
edition = "2021"

[dependencies]

codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
# scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
# frame-support = { version = "36.0.0", default-features = false }
# frame-system = { version = "36.1.0", default-features = false }
# sp-std = { version = "14.0.0", default-features = false }

# tanssi
# sp-std = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2407", default-features = false }
# frame-system = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2407", default-features = false }
# frame-support = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2407", default-features = false }
# scale-info = { version = "2.10.0", default-features = false, features = ["derive"]  }
# codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }

sp-std = {workspace = true, default-features = false}
frame-system = {workspace = true, default-features = false}
frame-support = {workspace = true, default-features = false}
scale-info = {workspace = true, default-features = false}


[dev-dependencies]
# sp-core = { version = "34.0.0", default-features = false }
# sp-io = { version = "37.0.0", default-features = false }
# sp-runtime = { version = "38.0.0", default-features = false }

# tanssi
# sp-core = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2407", default-features = false }
# sp-io = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2407", default-features = false }
# sp-runtime = { git = "https://github.com/moondance-labs/polkadot-sdk", branch = "tanssi-polkadot-stable2407", default-features = false }

sp-core = {workspace = true, default-features = false}
sp-io = {workspace = true, default-features = false}
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]
